<resources>
    <string name="app_name">BSCatchphrase</string>
    <string name="start_button">Start Game</string>
    <string name="next_button">Next Word</string>
    <string name="bs_button">BS!</string>
    <string name="return_button">Return to menu</string>
    <string name="point_button">Add point</string>
    <string name="Rules_info">Rules and Information</string>
    <string name="rb1">Memes</string>
    <string name="rb2">90\'s Cartoons</string>
    <string name="rb3">90\'s Movies</string>
    <string name="main_header">Choose a catagory</string>
    <string name="Rules">BSCatchphrase is a mixture of catchphrase and the card game BS.
        \nIn this  game you aren\'t allowed to skip words so if you can\'t get your team to say the word you can try to get them to say something else!
        \nBut if the other team catches your lie they get the point!
        \nFirst team to 7 points wins.
        \nHave fun and DON\'T cheat this app will let you (for now) :D
    </string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="timer">Timer</string>
    <string name="category">Category</string>
    <string name="currentWord">Tap Start/Stop to Begin</string>
    <string name="start_stop_button">Start/Stop`</string>
    <string name="reminder">Remember! you can\'t skip ANY words\nThink of a believable lie! </string>
    <string name="congradulations">Congratulations!</string>
</resources>
